deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-app
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wil-app
  template:
    metadata:
      labels:
        app: wil-app
    spec:
      containers:
      - name: wil42
        image: wil42/playground
        ports:
        - containerPort: 8888
