service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-app-service
  namespace: dev
spec:
  selector:
    app: wil-app
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: NodePort
