wil-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil-app-ingress
  namespace: dev
spec:
  rules:
  - host: wil-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wil-app-service
            port:
              number: 8888
